<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <!--    Display    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".30"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/answer_field"
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:textSize="100px"
                android:padding="24dp"
                android:gravity="right"
                android:layout_gravity="bottom"
                android:text="@string/answer_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".14"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".75"
            android:textSize="100px"
            android:text="@string/ac_button" />

        <Button
            android:id="@+id/divide_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/divide_button"
            android:textSize="100px"
            android:layout_weight=".25" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".14"
        android:orientation="horizontal">
        <Button
            android:id="@+id/seven_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:textSize="100px"
            android:text="@string/seven_button" />

        <Button
            android:id="@+id/eight_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/eight_button"
            android:textSize="100px" />
        <Button
            android:id="@+id/nine_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:textSize="100px"
            android:text="@string/nine_button" />
        <Button
            android:id="@+id/multiply_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/multiply_button"
            android:textSize="100px"
            android:layout_weight=".25" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".14"
        android:orientation="horizontal">
        <Button
            android:id="@+id/four_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:textSize="100px"
            android:text="@string/four_button" />
        <Button
            android:id="@+id/five_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:textSize="100px"
            android:text="@string/five_button" />
        <Button
            android:id="@+id/six_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:textSize="100px"
            android:text="@string/six_button" />
        <Button
            android:id="@+id/subtract_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/subtract_button"
            android:textSize="100px"
            android:layout_weight=".25" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".14"
        android:textStyle="bold"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:text="@string/one_button"
            android:textSize="100px" />

        <Button
            android:id="@+id/two_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:textSize="100px"
            android:text="@string/two_button" />
        <Button
            android:id="@+id/three_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:textSize="100px"
            android:text="@string/three_button" />
        <Button
            android:id="@+id/plus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/plus_button"
            android:textSize="100px"
            android:layout_weight=".25" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".14"
        android:orientation="horizontal">
        <Button
            android:id="@+id/zero_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".50"
            android:textSize="100px"
            android:text="@string/zero_button" />
        <Button
            android:id="@+id/dot_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:textSize="100px"
            android:text="@string/dot_button" />
        <Button
            android:id="@+id/equal_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equal_button"
            android:textSize="100px"
            android:layout_weight=".25" />

    </LinearLayout>



</LinearLayout>